--- a/test-reports/html/all-tests.html
+++ b/test-reports/html/all-tests.html
@@ -18,7 +18,25 @@
 <th>Class</th><th>Name</th><th>Status</th><th width="80%">Type</th><th nowrap>Time(s)</th>
 </tr>
 <tr valign="top" class="TableRowColor">
-<td><a href="pt/fccn/arquivo/tests/0_HighlightsTest.html">HighlightsTest</a></td><td><a name="highlightLinkTest"></a><a href="pt/fccn/arquivo/tests/0_HighlightsTest.html#highlightLinkTest">highlightLinkTest</a></td><td>Success</td><td></td><td>6.671</td>
+<td><a href="pt/fccn/arquivo/tests/0_AllTests.html">AllTests</a></td><td><a name="highlightLinkTest"></a><a href="pt/fccn/arquivo/tests/0_AllTests.html#highlightLinkTest">highlightLinkTest</a></td><td>Success</td><td></td><td>13.050</td>
+</tr>
+<tr valign="top" class="TableRowColor">
+<td><a href="pt/fccn/arquivo/tests/0_AllTests.html">AllTests</a></td><td><a name="testSearchOneTerm"></a><a href="pt/fccn/arquivo/tests/0_AllTests.html#testSearchOneTerm">testSearchOneTerm</a></td><td>Success</td><td></td><td>6.308</td>
+</tr>
+<tr valign="top" class="TableRowColor">
+<td><a href="pt/fccn/arquivo/tests/0_AllTests.html">AllTests</a></td><td><a name="termsAndConditionsTest"></a><a href="pt/fccn/arquivo/tests/0_AllTests.html#termsAndConditionsTest">termsAndConditionsTest</a></td><td>Success</td><td></td><td>503.832</td>
+</tr>
+<tr valign="top" class="TableRowColor">
+<td><a href="pt/fccn/arquivo/tests/0_AllTests.html">AllTests</a></td><td><a name="test"></a><a href="pt/fccn/arquivo/tests/0_AllTests.html#test">test</a></td><td>Success</td><td></td><td>1.131</td>
+</tr>
+<tr valign="top" class="TableRowColor">
+<td><a href="pt/fccn/arquivo/tests/0_AllTests.html">AllTests</a></td><td><a name="testSearchOneTermOpenSearch"></a><a href="pt/fccn/arquivo/tests/0_AllTests.html#testSearchOneTermOpenSearch">testSearchOneTermOpenSearch</a></td><td>Success</td><td></td><td>3.999</td>
+</tr>
+<tr valign="top" class="TableRowColor">
+<td><a href="pt/fccn/arquivo/tests/0_AllTests.html">AllTests</a></td><td><a name="TestArcproxy"></a><a href="pt/fccn/arquivo/tests/0_AllTests.html#TestArcproxy">TestArcproxy</a></td><td>Success</td><td></td><td>2.431</td>
+</tr>
+<tr valign="top" class="TableRowColor">
+<td><a href="pt/fccn/arquivo/tests/0_AllTests.html">AllTests</a></td><td><a name="AdvancedTest"></a><a href="pt/fccn/arquivo/tests/0_AllTests.html#AdvancedTest">AdvancedTest</a></td><td>Success</td><td></td><td>8.459</td>
 </tr>
 </table>
 </body>
