--- a/test-reports/html/all-tests.html
+++ b/test-reports/html/all-tests.html
@@ -18,25 +18,28 @@
 <th>Class</th><th>Name</th><th>Status</th><th width="80%">Type</th><th nowrap>Time(s)</th>
 </tr>
 <tr valign="top" class="TableRowColor">
-<td><a href="pt/fccn/arquivo/tests/0_AllTests.html">AllTests</a></td><td><a name="highlightLinkTest"></a><a href="pt/fccn/arquivo/tests/0_AllTests.html#highlightLinkTest">highlightLinkTest</a></td><td>Success</td><td></td><td>14.842</td>
+<td><a href="pt/fccn/arquivo/tests/0_AllTests.html">AllTests</a></td><td><a name="testSearchOneTerm"></a><a href="pt/fccn/arquivo/tests/0_AllTests.html#testSearchOneTerm">testSearchOneTerm</a></td><td>Success</td><td></td><td>4.549</td>
 </tr>
 <tr valign="top" class="TableRowColor">
-<td><a href="pt/fccn/arquivo/tests/0_AllTests.html">AllTests</a></td><td><a name="testSearchOneTerm"></a><a href="pt/fccn/arquivo/tests/0_AllTests.html#testSearchOneTerm">testSearchOneTerm</a></td><td>Success</td><td></td><td>5.476</td>
+<td><a href="pt/fccn/arquivo/tests/0_AllTests.html">AllTests</a></td><td><a name="highlightLinkTest"></a><a href="pt/fccn/arquivo/tests/0_AllTests.html#highlightLinkTest">highlightLinkTest</a></td><td>Success</td><td></td><td>13.678</td>
 </tr>
 <tr valign="top" class="TableRowColor">
-<td><a href="pt/fccn/arquivo/tests/0_AllTests.html">AllTests</a></td><td><a name="termsAndConditionsTest"></a><a href="pt/fccn/arquivo/tests/0_AllTests.html#termsAndConditionsTest">termsAndConditionsTest</a></td><td>Success</td><td></td><td>4.552</td>
+<td><a href="pt/fccn/arquivo/tests/0_AllTests.html">AllTests</a></td><td><a name="termsAndConditionsTest"></a><a href="pt/fccn/arquivo/tests/0_AllTests.html#termsAndConditionsTest">termsAndConditionsTest</a></td><td>Success</td><td></td><td>4.984</td>
 </tr>
 <tr valign="top" class="TableRowColor">
-<td><a href="pt/fccn/arquivo/tests/0_AllTests.html">AllTests</a></td><td><a name="test"></a><a href="pt/fccn/arquivo/tests/0_AllTests.html#test">test</a></td><td>Success</td><td></td><td>1.058</td>
+<td><a href="pt/fccn/arquivo/tests/0_AllTests.html">AllTests</a></td><td><a name="test"></a><a href="pt/fccn/arquivo/tests/0_AllTests.html#test">test</a></td><td>Success</td><td></td><td>1.334</td>
 </tr>
 <tr valign="top" class="TableRowColor">
-<td><a href="pt/fccn/arquivo/tests/0_AllTests.html">AllTests</a></td><td><a name="testSearchOneTermOpenSearch"></a><a href="pt/fccn/arquivo/tests/0_AllTests.html#testSearchOneTermOpenSearch">testSearchOneTermOpenSearch</a></td><td>Success</td><td></td><td>4.164</td>
+<td><a href="pt/fccn/arquivo/tests/0_AllTests.html">AllTests</a></td><td><a name="testSearchOneTermOpenSearch"></a><a href="pt/fccn/arquivo/tests/0_AllTests.html#testSearchOneTermOpenSearch">testSearchOneTermOpenSearch</a></td><td>Success</td><td></td><td>1.803</td>
 </tr>
 <tr valign="top" class="TableRowColor">
-<td><a href="pt/fccn/arquivo/tests/0_AllTests.html">AllTests</a></td><td><a name="TestArcproxy"></a><a href="pt/fccn/arquivo/tests/0_AllTests.html#TestArcproxy">TestArcproxy</a></td><td>Success</td><td></td><td>2.823</td>
+<td><a href="pt/fccn/arquivo/tests/0_AllTests.html">AllTests</a></td><td><a name="TestArcproxy"></a><a href="pt/fccn/arquivo/tests/0_AllTests.html#TestArcproxy">TestArcproxy</a></td><td>Success</td><td></td><td>2.916</td>
 </tr>
 <tr valign="top" class="TableRowColor">
-<td><a href="pt/fccn/arquivo/tests/0_AllTests.html">AllTests</a></td><td><a name="AdvancedTest"></a><a href="pt/fccn/arquivo/tests/0_AllTests.html#AdvancedTest">AdvancedTest</a></td><td>Success</td><td></td><td>6.029</td>
+<td><a href="pt/fccn/arquivo/tests/0_AllTests.html">AllTests</a></td><td><a name="AdvancedTest"></a><a href="pt/fccn/arquivo/tests/0_AllTests.html#AdvancedTest">AdvancedTest</a></td><td>Success</td><td></td><td>4.208</td>
+</tr>
+<tr valign="top" class="TableRowColor">
+<td><a href="pt/fccn/arquivo/tests/0_AllTests.html">AllTests</a></td><td><a name="AdvancedTest"></a><a href="pt/fccn/arquivo/tests/0_AllTests.html#AdvancedTest">AdvancedTest</a></td><td>Success</td><td></td><td>6.151</td>
 </tr>
 </table>
 </body>
